--- a/opendata/index.html
+++ b/opendata/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>你想知道的 这里都有</title>
+    <title>中国政府公开数据</title>
     <link rel="stylesheet" href="./libsFor2/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <script type="text/javascript" src="./libsFor2/angular.min.js"></script>
@@ -10,9 +10,12 @@
     <script type="text/javascript" src="./libsFor2/angular-touch.min.js"></script>
     <script type="text/javascript" src="./libsFor2/ui-bootstrap-tpls-2.4.0.min.js"></script>
     <script type="text/javascript" src="./rootCtrl.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="RootCtrl">
-<div><a class="mainTabHome" href="demos.html">Demos</a></div>
-<div><a class="mainTabHome" href="people.html">People</a></div>
+<!--<script type='text/javascript' src='views/aTourism.js'></script>-->
+<!--<div><a class="mainTabHome" href="demos.html">Demos</a></div>-->
+<!--<div><a class="mainTabHome" href="people.html">People</a></div>-->
+<button ng-click="openPage('BeiJingMesum.html')">北京地区博物馆</button>
 </body>
 </html>
